[package]
name = "vncrs"
version = "0.1.1"
edition = "2021"
description = "A pure Rust VNC server library for Windows"
license = "MIT"
repository = "https://github.com/yourusername/vncrs"
keywords = ["vnc", "rfb", "screen-sharing", "remote-desktop", "server"]
categories = ["network-programming", "os::windows-apis"]

[lib]
name = "vncrs"
path = "src/lib.rs"

[dependencies]
scrap = "0.5"
enigo = "0.2"
flate2 = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
des = "0.8"
cipher = "0.4"
rand = "0.8"

[dev-dependencies]
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
